# AFA-Benchmark

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  flake.nix  justfile  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  pytest.ini  ruff.toml
.dvc/: config
afabench/: __init__.py  hub.py
afabench/afa_discriminative/: afa_methods.py  datasets.py  models.py  utils.py
afabench/afa_generative/: afa_methods.py
afabench/afa_oracle/: __init__.py  aaco_core.py  aaco_nn.py  afa_methods.py  mask_generator.py  utils.py
afabench/afa_rl/: afa_env.py  datasets.py  reward_functions.py  utils.py
afabench/common/: afa_methods.py  bundle.py  classifiers.py  config_classes.py  cube_nm_ar_oracle_method.py  custom_types.py  models.py  naming.py  parquet.py  registry.py  stop_baseline_method.py  supervised_learning.py  utils.py
afabench/eval/: cube_nm_ar.py  eval.py  metrics.py  plotting_config.py  stop_shielding.py
afabench/missing_values/: __init__.py  masking.py
afabench/static/: models.py  static_methods.py  utils.py
afabench/test/: helpers.py
docs/: bundle_format.md  limitations.md  model_training_speed_dependence_on_device.md  sanity_checks.md  terminology.md
docs/tutorials/: add_dataset.md  add_method.md  pipeline_explanation.md  slurm_integration.md
extra/: .gitignore  output.dvc  output_smoke.dvc
scripts/analysis/: cmi_bias_analysis.py  missing_train_analysis.py  plot_action_heatmap_comparison.py  plot_dualized_stop_effectiveness.py  plot_missing_train_comparison.py  plot_stop_shield_effectiveness.py  select_dual_lambda.py
scripts/dataset_generation/: generate_costs.py  generate_image_dataset.py
test/: conftest.py
(+527 files in other folders)
